cleaned up and validated all code.

--- a/AnimalShop.Html
+++ b/AnimalShop.Html
@@ -15,11 +15,11 @@
 
 <div class="middle" style="font-family:Calibri">
         <div style="font-family:Calibri">
-        <ul>
+        <center><ul>
                 <li><a href="default.asp">Home</a></li>
                 <li><a href="about.asp">About us</a></li>
                 <li><a href="contact.asp">Contact us</a></li>
-              </ul>
+              </ul></center>
 </div>
 
         <div><h3>Our animals</h3>
